microservices/register-sale/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: register-sale
  labels:
    app: register-sale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: register-sale
  template:
    metadata:
      labels:
        app: register-sale
    spec:
      containers:
        - name: register-sale
          image: gcr.io/gcp-recargas/register-sale:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
              readOnly: true
      volumes:
        - name: google-cloud-key
          secret:
            secretName: gcp-service-account
