microservices/register-sale/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: register-sale
spec:
  selector:
    app: register-sale
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
